--- a/main.html
+++ b/main.html
@@ -10,7 +10,16 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+ <h2>What is the capital of India?</h2>
+	<div>
+		<input type='radio'>
+	<label for='city'>New Delhi</label>
+	
+	</div>
+	<div>
+		<input type='radio'>
+	<label for='city2'>Mumbai</label>
+	</div>
+	<p id='hello'>New Delhi is the capital of India and an administrative district of NCT Delhi.</p>
 </body>
-
 </html>
